force-app/main/default/objects/hed__Education_History__c/fields/hed__Class_Percentile__c.field-meta.xml
<CustomField>
    <fullName>hed__Class_Percentile__c</fullName>
    <description>The student&apos;s percentile ranking for their class. For example, a student that ranks in the top 10% has a 90% value.</description>
    <inlineHelpText>Le rang centile de l&apos;étudiant dans sa classe. Par exemple, un étudiant classé dans les 10 % supérieurs a une valeur de 90 %.</inlineHelpText>
    <label>Class Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>