force-app/main/default/objects/hed__Education_History__c/fields/hed__Class_Rank__c.field-meta.xml
<CustomField>
    <fullName>hed__Class_Rank__c</fullName>
    <description>The student&apos;s academic rank in relation to their graduating class. For example, a student that ranks 5th in the class of 200, has a value of 5.</description>
    <inlineHelpText>Le niveau académique de l&apos;étudiant par rapport à sa promotion. Par exemple, un étudiant classé 5e dans une classe de 200 étudiants a une valeur de 5.</inlineHelpText>
    <label>Class Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>