force-app/main/default/objects/hed__Education_History__c/fields/hed__GPA_Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__GPA_Scale_Type__c</fullName>
    <description>Tracks how the GPA was determined. For example, using a weighted or unweighted scale.</description>
    <inlineHelpText>Indique comment la moyenne pondérée cumulative a été déterminée, par exemple en utilisant une échelle pondérée ou non pondérée.</inlineHelpText>
    <label>GPA Scale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unweighted</fullName>
            </value>
            <value>
                <fullName>Weighted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>