force-app/main/default/objects/hed__Education_History__c/fields/hed__Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Graduation_Date__c</fullName>
    <description>If applicable, the date the Contact graduated from this Educational Institution.</description>
    <inlineHelpText>Si applicable, la date à laquelle le contact a obtenu son diplôme dans cet établissement d&apos;enseignement.</inlineHelpText>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>