force-app/main/default/objects/hed__Education_History__c/fields/hed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Date__c</fullName>
    <description>The date the Contact started at this Educational Institution.</description>
    <inlineHelpText>La date à laquelle le contact a débuté sa formation dans cet établissement d&apos;enseignement.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>