force-app/main/default/objects/hed__Education_History__c/fields/SIS_Annee_du_diplome__c.field-meta.xml
<CustomField>
    <fullName>SIS_Annee_du_diplome__c</fullName>
    <label>Année du diplôme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1994 et avant</fullName>
            </value>
            <value>
                <fullName>1995 et après</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>