force-app/main/default/objects/hed__Education_History__c/fields/SIS_Diplome_intitule__c.field-meta.xml
<CustomField>
    <fullName>SIS_Diplome_intitule__c</fullName>
    <label>Diplôme intitulé</label>
    <length>100</length>
    <type>Text</type>
</CustomField>