force-app/main/default/objects/hed__Education_History__c/fields/SIS_Diplome_niveau__c.field-meta.xml
<CustomField>
    <fullName>SIS_Diplome_niveau__c</fullName>
    <label>Diplôme niveau</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Nationalite_du_diplome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun diplôme</fullName>
            </value>
            <value>
                <fullName>Niveau Bac</fullName>
            </value>
            <value>
                <fullName>Niveau Bac +1</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+2</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+3</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+4</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+5</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+6</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+7</fullName>
            </value>
            <value>
                <fullName>Niveau Bac+8 et plus</fullName>
            </value>
            <value>
                <fullName>No degree</fullName>
            </value>
            <value>
                <fullName>Secondary education</fullName>
            </value>
            <value>
                <fullName>1-year higher education</fullName>
            </value>
            <value>
                <fullName>2- year higher education</fullName>
            </value>
            <value>
                <fullName>3-year higher education</fullName>
            </value>
            <value>
                <fullName>4-year higher education</fullName>
            </value>
            <value>
                <fullName>5-year higher education</fullName>
            </value>
            <value>
                <fullName>6-year higher education</fullName>
            </value>
            <value>
                <fullName>7-year higher education</fullName>
            </value>
            <value>
                <fullName>8-year or more higher education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>