force-app/main/default/objects/hed__Education_History__c/fields/SIS_Duree_du_sejour__c.field-meta.xml
<CustomField>
    <fullName>SIS_Duree_du_sejour__c</fullName>
    <formula>hed__End_Date__c -  hed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée du séjour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>