force-app/main/default/objects/hed__Education_History__c/fields/SIS_Filiere__c.field-meta.xml
<CustomField>
    <fullName>SIS_Filiere__c</fullName>
    <label>Filière</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Annee_du_diplome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHILOSOPHIE-LETTRES</fullName>
            </value>
            <value>
                <fullName>ÉCONOMIQUE ET SOCIAL</fullName>
            </value>
            <value>
                <fullName>LETTRES-SCIENCES</fullName>
            </value>
            <value>
                <fullName>LETTRES-LANGUES</fullName>
            </value>
            <value>
                <fullName>LETTRES-ARTS PLASTIQUES</fullName>
            </value>
            <value>
                <fullName>LANGUES MATHÉMATIQUES</fullName>
            </value>
            <value>
                <fullName>LANGUES</fullName>
            </value>
            <value>
                <fullName>ÉDUCATION MUSICALE</fullName>
            </value>
            <value>
                <fullName>ARTS PLASTIQUES</fullName>
            </value>
            <value>
                <fullName>MATHÉMATIQUES ET SCIENCES PHYSIQUES</fullName>
            </value>
            <value>
                <fullName>MATHÉMATIQUES ET SCIENCES DE LA NATURE</fullName>
            </value>
            <value>
                <fullName>SCIENCES AGRONOMIQUES-TECHNIQUES</fullName>
            </value>
            <value>
                <fullName>MATHÉMATIQUES ET TECHNIQUES</fullName>
            </value>
            <value>
                <fullName>BAC INTERNATIONAL ET BAC EUROPÉEN (JUSQU’EN 2010)</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION MÉCANIQUE</fullName>
            </value>
            <value>
                <fullName>ÉLECTRONIQUE</fullName>
            </value>
            <value>
                <fullName>ÉLECTROTECHNIQUE</fullName>
            </value>
            <value>
                <fullName>GÉNIE CIVIL</fullName>
            </value>
            <value>
                <fullName>PHYSIQUE</fullName>
            </value>
            <value>
                <fullName>CHIMIE</fullName>
            </value>
            <value>
                <fullName>BIOLOGIE OPTION BIOCHIMIE</fullName>
            </value>
            <value>
                <fullName>BIOLOGIE OPTION BIOLOGIE</fullName>
            </value>
            <value>
                <fullName>SCIENCES MÉDICO-SOCIALES</fullName>
            </value>
            <value>
                <fullName>ÉQUIPEMENT TECHNIQUE – BÂTIMENT</fullName>
            </value>
            <value>
                <fullName>MICROTECHNIQUE</fullName>
            </value>
            <value>
                <fullName>MICROTECHNIQUE OPTION APPAREILLAGE</fullName>
            </value>
            <value>
                <fullName>MICROTECHNIQUE OPTION OPTIQUE</fullName>
            </value>
            <value>
                <fullName>MUSIQUE</fullName>
            </value>
            <value>
                <fullName>DANSE</fullName>
            </value>
            <value>
                <fullName>ARTS APPLIQUÉS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>