force-app/main/default/objects/hed__Education_History__c/fields/SIS_Mention__c.field-meta.xml
<CustomField>
    <fullName>SIS_Mention__c</fullName>
    <label>Mention</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Titre_du_diplome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sans mention</fullName>
            </value>
            <value>
                <fullName>Assez bien</fullName>
            </value>
            <value>
                <fullName>Bien</fullName>
            </value>
            <value>
                <fullName>Très bien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>