force-app/main/default/objects/hed__Education_History__c/fields/SIS_Nationalite_du_diplome__c.field-meta.xml
<CustomField>
    <fullName>SIS_Nationalite_du_diplome__c</fullName>
    <label>Nationalité du diplôme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <label>Français</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>