force-app/main/default/objects/hed__Education_History__c/fields/SIS_Pays__c.field-meta.xml
<CustomField>
    <fullName>SIS_Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Parcours de formation</relationshipLabel>
    <relationshipName>Parcours_de_formation</relationshipName>
    <type>Lookup</type>
</CustomField>