force-app/main/default/objects/hed__Education_History__c/fields/SIS_Sejour_linguistique__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sejour_linguistique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Séjour linguistique</label>
    <type>Checkbox</type>
</CustomField>