force-app/main/default/objects/hed__Education_History__c/fields/SIS_Titre_du_diplome__c.field-meta.xml
<CustomField>
    <fullName>SIS_Titre_du_diplome__c</fullName>
    <label>Titre du diplôme</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Nationalite_du_diplome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baccalauréat français</fullName>
            </value>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>DUT</fullName>
            </value>
            <value>
                <fullName>Classes préparatoires (CPGE)</fullName>
            </value>
            <value>
                <fullName>Diplôme d&apos;Ingénieur</fullName>
            </value>
            <value>
                <fullName>DAEU / Capacité en droit</fullName>
            </value>
            <value>
                <fullName>DEUG</fullName>
            </value>
            <value>
                <fullName>Attestation de fin de PACES / PASS</fullName>
            </value>
            <value>
                <fullName>DCEM / DCEP</fullName>
            </value>
            <value>
                <fullName>Diplôme d&apos;école de management</fullName>
            </value>
            <value>
                <fullName>Diplôme paramédical et social</fullName>
            </value>
            <value>
                <fullName>DEUST</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Maîtrise</fullName>
            </value>
            <value>
                <fullName>Autre diplôme universitaire de 2ème cycle</fullName>
            </value>
            <value>
                <fullName>Master / DEA / DESS / Doctorat</fullName>
            </value>
            <value>
                <fullName>Autre diplôme supérieur</fullName>
            </value>
            <value>
                <fullName>Diplôme d&apos;établissement secondaire obtenu à l&apos;étranger</fullName>
            </value>
            <value>
                <fullName>Diplôme d&apos;établissement supérieur obtenu à l&apos;étranger</fullName>
            </value>
            <value>
                <fullName>DFG</fullName>
            </value>
            <value>
                <fullName>DFASM / DFASP</fullName>
            </value>
            <value>
                <fullName>Bachelor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>