force-app/main/default/objects/hed__Education_History__c/fields/SIS_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcours académique</fullName>
            </value>
            <value>
                <fullName>Parcours professionnel</fullName>
            </value>
            <value>
                <fullName>Séjour linguistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>