force-app/main/default/objects/hed__Education_History__c/fields/SIS_Type_d_etablissement__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type_d_etablissement__c</fullName>
    <label>Type d&apos;établissement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SIS_Nationalite_du_diplome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enseignement Secondaire</fullName>
            </value>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>IUT / licence professionnelle</fullName>
            </value>
            <value>
                <fullName>CPGE ou ATS</fullName>
            </value>
            <value>
                <fullName>Ecole et formation d&apos;INGENIEURS</fullName>
            </value>
            <value>
                <fullName>Enseignement supérieur par CORRESPONDANCE</fullName>
            </value>
            <value>
                <fullName>UNIVERSITE et Paris Dauphine</fullName>
            </value>
            <value>
                <fullName>ECOLE ARTISTIQUE, CULTURELLE, D’ARCHITECTURE</fullName>
            </value>
            <value>
                <fullName>Ecole de MANAGEMENT (école de commerce, gestion)</fullName>
            </value>
            <value>
                <fullName>AUTRE ETABLISSEMENT SISE (liste ci-dessous)</fullName>
            </value>
            <value>
                <fullName>Ecoles normales supérieures (ENS Cachan, Lyon, Paris)</fullName>
            </value>
            <value>
                <fullName>Instituts catholiques (Lille, Lyon, Nantes (univ catholique de l’ouest), Paris et Toulouse)</fullName>
            </value>
            <value>
                <fullName>Museum national d’histoire naturelle (MNHN)</fullName>
            </value>
            <value>
                <fullName>Ecole des hautes études en sciences sociales (EHESS)</fullName>
            </value>
            <value>
                <fullName>Ecole pratique des hautes études (EPHE)</fullName>
            </value>
            <value>
                <fullName>Ecole nationale des Chartes (ENC)</fullName>
            </value>
            <value>
                <fullName>Ecole nationale supérieure des sciences de l’information et des bibliothèques (ENSSIB)</fullName>
            </value>
            <value>
                <fullName>Ecole nationale de la statistique et de l’administration économique (ENSAE Malakoff)</fullName>
            </value>
            <value>
                <fullName>Institut catholique d’études supérieures (ICES La Roche/Yon)</fullName>
            </value>
            <value>
                <fullName>Institut national des langues et civilisations orientales (INALCO), Institut de physique du globe de Paris, institut d’études politiques de Paris, Observatoire de Paris</fullName>
            </value>
            <value>
                <fullName>Ecoles nationales vétérinaires (Lyon (VETAGRO SUP), Maisons Alfort, Nantes (ONIRIS), Toulouse)</fullName>
            </value>
            <value>
                <fullName>Ecole nationale supérieure du paysage de Versailles</fullName>
            </value>
            <value>
                <fullName>ESPE : Ecoles Supérieures du Professorat et de l’Education</fullName>
            </value>
            <value>
                <fullName>MISE A NIVEAU, PREPARATION AUX ETUDES SUPERIEURES</fullName>
            </value>
            <value>
                <fullName>AUTRE ETABLISSEMENT ou cursus (en France)</fullName>
            </value>
            <value>
                <fullName>NON SCOLARISE l’année précédente ET JAMAIS ENTRE dans l’enseignement supérieur</fullName>
            </value>
            <value>
                <fullName>NON SCOLARISE l’année précédente MAIS PRECEDEMMENT ENTRE dans l’enseignement supérieur, universitaire ou non (reprise d’études) en France</fullName>
            </value>
            <value>
                <fullName>Etablissement ETRANGER d’enseignement secondaire</fullName>
            </value>
            <value>
                <fullName>Etablissement ETRANGER d’enseignement supérieur</fullName>
            </value>
            <value>
                <fullName>NON SCOLARISE l’année précédente MAIS PRECEDEMMENT ENTRE dans l’enseignement supérieur à l’étranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>