force-app/main/default/objects/hed__Education_History__c/fields/SIS_Ville__c.field-meta.xml
<CustomField>
    <fullName>SIS_Ville__c</fullName>
    <label>Ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>