force-app/main/default/objects/hed__Education_History__c/recordTypes/SIS_Parcours_academique.recordType-meta.xml
<RecordType>
    <fullName>SIS_Parcours_academique</fullName>
    <active>true</active>
    <label>Parcours académique</label>
</RecordType>