force-app/main/default/objects/hed__Education_History__c/recordTypes/SIS_Parcours_professionnel.recordType-meta.xml
<RecordType>
    <fullName>SIS_Parcours_professionnel</fullName>
    <active>true</active>
    <label>Parcours professionnel</label>
</RecordType>