force-app/main/default/objects/hed__Education_History__c/recordTypes/SIS_Sejour_linguistique.recordType-meta.xml
<RecordType>
    <fullName>SIS_Sejour_linguistique</fullName>
    <active>true</active>
    <label>Séjour linguistique</label>
</RecordType>